--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>injcristianrojas</groupId>
     <artifactId>swsec-intro</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Fans de las Aves Chilenas</name>
 
@@ -56,6 +56,11 @@
             <version>3.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    			<groupId>com.sun.jersey</groupId>
+    			<artifactId>jersey-server</artifactId>
+    			<version>1.8</version>
+		    </dependency>
     </dependencies>
 
     <build>
