--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,10 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    version="3.0"> 
-	
+    version="3.0">
+
 	<display-name>AvesChilenas</display-name>
-	
+
 	<servlet>
 		<description>
 		</description>
@@ -55,6 +55,17 @@
 		<servlet-name>Account</servlet-name>
 		<servlet-class>swsec.Account</servlet-class>
 	</servlet>
+  <servlet>
+    <servlet-name>jersey-servlet</servlet-name>
+    <servlet-class>
+      com.sun.jersey.spi.container.servlet.ServletContainer
+    </servlet-class>
+    <init-param>
+	     <param-name>com.sun.jersey.config.property.packages</param-name>
+	     <param-value>swsec.api</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+  </servlet>
 
 	<servlet-mapping>
 		<servlet-name>Saludos</servlet-name>
@@ -84,10 +95,14 @@
 		<servlet-name>Account</servlet-name>
 		<url-pattern>/Account</url-pattern>
 	</servlet-mapping>
+  <servlet-mapping>
+		<servlet-name>jersey-servlet</servlet-name>
+		<url-pattern>/api/*</url-pattern>
+	</servlet-mapping>
 
 	<listener>
-        <listener-class>swsec.SWSECContextListener</listener-class>
-    </listener>
+    <listener-class>swsec.SWSECContextListener</listener-class>
+  </listener>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
