Added API and multiple corrections

--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-    			<groupId>com.sun.jersey</groupId>
-    			<artifactId>jersey-server</artifactId>
-    			<version>1.8</version>
-		    </dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,7 +89,6 @@
                         </goals>
                         <configuration>
                             <scanIntervalSeconds>0</scanIntervalSeconds>
-                            <daemon>true</daemon>
                         </configuration>
                     </execution>
                     <execution>
