--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,115 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    version="3.0">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
 
-	<display-name>AvesChilenas</display-name>
+    <display-name>AvesChilenas</display-name>
 
-	<servlet>
-		<description>
-		</description>
-		<display-name>Saludos</display-name>
-		<servlet-name>Saludos</servlet-name>
-		<servlet-class>swsec.Saludos</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>Login</display-name>
-		<servlet-name>Login</servlet-name>
-		<servlet-class>swsec.Login</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>Wall</display-name>
-		<servlet-name>Wall</servlet-name>
-		<servlet-class>swsec.Wall</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>ListaUsuarios</display-name>
-		<servlet-name>ListaUsuarios</servlet-name>
-		<servlet-class>swsec.ListaUsuarios</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>UploadServlet</display-name>
-		<servlet-name>UploadServlet</servlet-name>
-		<servlet-class>swsec.UploadServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>Exit</display-name>
-		<servlet-name>Exit</servlet-name>
-		<servlet-class>swsec.Exit</servlet-class>
-	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>Account</display-name>
-		<servlet-name>Account</servlet-name>
-		<servlet-class>swsec.Account</servlet-class>
-	</servlet>
-  <servlet>
-    <servlet-name>jersey-servlet</servlet-name>
-    <servlet-class>
-      com.sun.jersey.spi.container.servlet.ServletContainer
-    </servlet-class>
-    <init-param>
-	     <param-name>com.sun.jersey.config.property.packages</param-name>
-	     <param-value>swsec.api</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-  </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>Saludos</display-name>
+        <servlet-name>Saludos</servlet-name>
+        <servlet-class>swsec.Saludos</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>Login</display-name>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>swsec.Login</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>Wall</display-name>
+        <servlet-name>Wall</servlet-name>
+        <servlet-class>swsec.Wall</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>ListaUsuarios</display-name>
+        <servlet-name>ListaUsuarios</servlet-name>
+        <servlet-class>swsec.ListaUsuarios</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>UploadServlet</display-name>
+        <servlet-name>UploadServlet</servlet-name>
+        <servlet-class>swsec.UploadServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>Exit</display-name>
+        <servlet-name>Exit</servlet-name>
+        <servlet-class>swsec.Exit</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>Account</display-name>
+        <servlet-name>Account</servlet-name>
+        <servlet-class>swsec.Account</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>jersey-servlet</servlet-name>
+        <servlet-class>
+            com.sun.jersey.spi.container.servlet.ServletContainer
+        </servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>swsec.api</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+        <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </servlet>
 
-	<servlet-mapping>
-		<servlet-name>Saludos</servlet-name>
-		<url-pattern>/Saludos</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Login</servlet-name>
-		<url-pattern>/Login</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Wall</servlet-name>
-		<url-pattern>/Wall</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>ListaUsuarios</servlet-name>
-		<url-pattern>/ListaUsuarios</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>UploadServlet</servlet-name>
-		<url-pattern>/UploadServlet</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Exit</servlet-name>
-		<url-pattern>/Exit</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Account</servlet-name>
-		<url-pattern>/Account</url-pattern>
-	</servlet-mapping>
-  <servlet-mapping>
-		<servlet-name>jersey-servlet</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Saludos</servlet-name>
+        <url-pattern>/Saludos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Wall</servlet-name>
+        <url-pattern>/Wall</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaUsuarios</servlet-name>
+        <url-pattern>/ListaUsuarios</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/UploadServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Exit</servlet-name>
+        <url-pattern>/Exit</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Account</servlet-name>
+        <url-pattern>/Account</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>jersey-servlet</servlet-name>
+        <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
 
-	<listener>
-    <listener-class>swsec.SWSECContextListener</listener-class>
-  </listener>
+    <listener>
+        <listener-class>swsec.SWSECContextListener</listener-class>
+    </listener>
 
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
