--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -103,6 +103,16 @@
         <servlet-name>jersey-servlet</servlet-name>
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
+    
+      <filter>
+	    <filter-name>headersFilter</filter-name>
+	    <filter-class>swsec.headers.MyHeadersFilter</filter-class>
+	  </filter>
+	
+	  <filter-mapping>
+	    <filter-name>headersFilter</filter-name>
+	    <url-pattern>*</url-pattern>
+	  </filter-mapping>
 
     <listener>
         <listener-class>swsec.SWSECContextListener</listener-class>
