--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>injcristianrojas</groupId>
     <artifactId>swsec-intro</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>war</packaging>
     <name>Fans de las Aves Chilenas</name>
 
