--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>3.3.2</version>
+                <version>5.0.0-M3</version>
                 <configuration>
                   <format>XML</format>
                 </configuration>
