--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   sonarqube:
-    image: sonarqube:7.0
+    image: sonarqube:7.7-community
     build: .
     ports:
       - '9000:9000'
