--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <jetty.version>9.4.6.v20170531</jetty.version>
+        <jetty.http.port>8090</jetty.http.port>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -86,9 +87,12 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
                 <configuration>
+                    <httpConnector>
+                      <port>${jetty.http.port}</port>
+                    </httpConnector>
                     <scanIntervalSeconds>3</scanIntervalSeconds>
                     <stopKey>stopKey</stopKey>
-                    <stopPort>8081</stopPort>
+                    <stopPort>8085</stopPort>
                     <stopWait>10</stopWait>
                 </configuration>
                 <executions>
