--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                 <version>${jetty.version}</version>
                 <configuration>
                     <httpConnector>
+                      <host>localhost.localdomain</host>
                       <port>${jetty.http.port}</port>
                     </httpConnector>
                     <scanIntervalSeconds>3</scanIntervalSeconds>
