Sonarqube to LTS

--- a/sonarqube/Dockerfile
+++ b/sonarqube/Dockerfile
@@ -1,4 +1,4 @@
-FROM sonarqube:7.7-community
+FROM sonarqube:lts
 
 RUN wget https://github.com/SonarSecurityCommunity/dependency-check-sonar-plugin/releases/download/1.2.4/sonar-dependency-check-plugin-1.2.4.jar -P /opt/sonarqube/extensions/plugins
 
