--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>5.0.0-M3</version>
+                <version>5.2.2</version>
                 <configuration>
                   <format>XML</format>
                 </configuration>
@@ -207,6 +207,12 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.6.0.1398</version>
             </plugin>
 
         </plugins>
