--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,20 @@
 
     <reporting>
         <plugins>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <reportSets>
+                  <reportSet>
+                    <reports>
+                      <report>dependency-updates-report</report>
+                      <report>plugin-updates-report</report>
+                      <report>property-updates-report</report>
+                    </reports>
+                  </reportSet>
+                </reportSets>
+              </plugin>
         </plugins>
     </reporting>
 
