--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,11 @@
 .classpath
 .project
 .settings/
-.gradle/
-.victims/
 .idea/
+.vscode/
 bin/
 target/
 build/
 src/main/webapp/findbugs
 src/main/webapp/upload/*
-
 dependency_check/
-
-settings.json
