--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -127,7 +127,7 @@
 	  </filter-mapping>
 
     <listener>
-        <listener-class>swsec.config.ContextListener</listener-class>
+        <listener-class>swsec.config.DatabasePopulater</listener-class>
     </listener>
 
     <welcome-file-list>
