--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <includes>
                         <include>**/*TTest.java</include>
