--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,7 @@
                 <version>5.2.4</version>
                 <configuration>
                   <format>XML</format>
+                  <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                 </configuration>
                 <executions>
                     <execution>
