Updating Dockerfile and docker-compose.yml
Dockerfile: Updating jenkinsci/blueocean to 1.24.3
docker-compose: Adding mounting point to jenkinsdata volume for persistence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '8081:8080'
     volumes:
-      - jenkinsdata
+      - jenkinsdata:/var/jenkins_home
 
 volumes:
   jenkinsdata:
