--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <name>Fans de las Aves Chilenas</name>
 
     <properties>
+        <java.version>1.8</java.version>
         <jetty.version>9.4.20.v20190813</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.dependencyCheck.reportPath>target/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
