Log clean and refactor

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -138,7 +138,7 @@
 	  </filter-mapping>
 
     <listener>
-        <listener-class>swsec.config.DatabasePopulater</listener-class>
+        <listener-class>swsec.config.ApplicationStarter</listener-class>
     </listener>
 
     <welcome-file-list>
